--- a/E05-Transformations/E05-Transformations.vcxproj
+++ b/E05-Transformations/E05-Transformations.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{F8D2226D-0FEB-4B92-9F76-59DBB6936F5C}</ProjectGuid>
-    <RootNamespace>C11_TranslationAndScale</RootNamespace>
-    <ProjectName>C11_TranslationAndScale</ProjectName>
+    <ProjectGuid>{A6CDB4A1-6FBC-4B3D-980C-F0806FB69A50}</ProjectGuid>
+    <RootNamespace>E05-Transformations</RootNamespace>
+    <ProjectName>E05-Transformations</ProjectName>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
