--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -115,7 +115,7 @@ Collapsed=0
 
 [A02s - 3D Primitives - About]
 Pos=1,1
-Size=295,284
+Size=323,284
 Collapsed=0
 
 [A03 - LERP - About]
@@ -710,7 +710,7 @@ Collapsed=0
 
 [A02.5 - LERP - About]
 Pos=1,1
-Size=340,60
+Size=323,165
 Collapsed=0
 
 [A03 - Camera - About]
@@ -762,4 +762,19 @@ Collapsed=0
 Pos=1,40
 Size=315,91
 Collapsed=1
+
+[E04 - Circle Creation_d - About]
+Pos=15,13
+Size=323,165
+Collapsed=0
+
+[E05-Transformations_d - About]
+Pos=1,1
+Size=323,165
+Collapsed=0
+
+[A02 - 3D Primitives_d - About]
+Pos=1,1
+Size=323,284
+Collapsed=0
 
