--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -778,3 +778,18 @@ Pos=1,1
 Size=323,284
 Collapsed=0
 
+[E08 - Projections_d - About]
+Pos=1,1
+Size=323,288
+Collapsed=0
+
+[C17_RigidBodyPt0_d - About]
+Pos=1,1
+Size=316,275
+Collapsed=0
+
+[A03 - Camera_d - About]
+Pos=1,1
+Size=340,60
+Collapsed=0
+
