did lots of stuff

--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -465,7 +465,7 @@ Collapsed=0
 
 [C13_Rotations_d - About]
 Pos=1,1
-Size=340,60
+Size=323,165
 Collapsed=0
 
 [C14_Quaternions_d - About]
@@ -785,10 +785,25 @@ Collapsed=0
 
 [C17_RigidBodyPt0_d - About]
 Pos=1,1
-Size=316,275
+Size=323,275
 Collapsed=0
 
 [A03 - Camera_d - About]
+Pos=1,1
+Size=323,114
+Collapsed=0
+
+[E09 - ARBB_d - About]
+Pos=1,1
+Size=323,254
+Collapsed=0
+
+[A04 - SAT_d - About]
+Pos=1,1
+Size=316,275
+Collapsed=0
+
+[A05 - Octree_d - About]
 Pos=1,1
 Size=340,60
 Collapsed=0
